fix: add border color to header and global styles

--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -6,4 +6,13 @@
   [role="button"]:not(:disabled) {
     cursor: pointer;
   }
+
+  *,
+  ::after,
+  ::before,
+  ::backdrop,
+  ::file-selector-button {
+    border-color: var(--color-gray-200);
+    outline-color: var(--color-gray-200);
+  }
 }
